--- a/custom_components/historical_stats/translations/en.json
+++ b/custom_components/historical_stats/translations/en.json
@@ -1,48 +1,57 @@
 {
-  "config": {
-    "step": {
-      "user": {
-        "title": "Configure Historical statistics",
-        "description": "Select the source entity and update interval.",
-        "data": {
-          "entity_id": "Entity",
-          "update_interval": "Update interval (minutes)"
-        }
-      },
-      "add_point": {
-        "title": "Add measurement point",
-        "description": "{info}",
-        "data": {
-          "stat_types": "Statistics types",
-          "time_unit": "Time unit",
-          "time_value": "Time value",
-          "add_another": "Add another"
-        }
-      }
+    "config": {
+        "step": {
+            "user": {
+                "title": "Configure Historical statistics",
+                "description": "Select the source entity and update interval.",
+                "data": {
+                    "entity_id": "Entity",
+                    "update_interval": "Update interval (minutes)",
+                },
+            },
+            "add_point": {
+                "title": "Add measurement point",
+                "description": "{info}",
+                "data": {
+                    "stat_types": "Statistics types",
+                    "time_unit": "Time unit",
+                    "time_value": "Time value",
+                    "add_another": "Add another",
+                },
+            },
+        },
+        "error": {},
     },
-    "error": {}
-  },
-  "options": {
-    "step": {
-      "init": {
-        "title": "Configure measurement points",
-        "description": "{current_points}",
-        "data": {
-          "add_point": "Add point",
-          "remove_index": "Remove index",
-          "finish": "Finish"
+    "options": {
+        "step": {
+            "init": {
+                "title": "Configure measurement points",
+                "description": "{current_points}",
+                "data": {
+                    "add_point": "Add point",
+                    "remove_index": "Remove index",
+                    "edit_index": "Edit index",
+                    "finish": "Finish",
+                },
+            },
+            "add_point": {
+                "title": "Add measurement point",
+                "description": "Set the parameters for the measurement point.",
+                "data": {
+                    "stat_type": "Statistic type",
+                    "time_unit": "Time unit",
+                    "time_value": "Time value",
+                },
+            },
+            "edit_point": {
+                "title": "Edit measurement point",
+                "description": "Update the parameters for the measurement point.",
+                "data": {
+                    "stat_type": "Statistic type",
+                    "time_unit": "Time unit",
+                    "time_value": "Time value",
+                },
+            },
         }
-      },
-      "add_point": {
-        "title": "Add measurement point",
-        "description": "Set the parameters for the measurement point.",
-        "data": {
-          "stat_type": "Statistic type",
-          "time_unit": "Time unit",
-          "time_value": "Time value"
-        }
-      }
-    }
-  }
+    },
 }
-
