Remove human timestamp attributes and add translation

--- a/custom_components/historical_stats/translations/en.json
+++ b/custom_components/historical_stats/translations/en.json
@@ -21,7 +21,9 @@
                 }
             }
         },
-        "error": {}
+        "error": {
+            "invalid_combination": "Value at / Total cannot be combined with other types."
+        }
     },
     "options": {
         "step": {
