Enforce exclusive stat types

--- a/custom_components/historical_stats/translations/en.json
+++ b/custom_components/historical_stats/translations/en.json
@@ -21,9 +21,7 @@
                 }
             }
         },
-        "error": {
-            "invalid_combination": "Value at / Total cannot be combined with other types."
-        }
+        "error": {}
     },
     "options": {
         "step": {
