Fix time unit handling and translations

--- a/custom_components/historical_stats/translations/en.json
+++ b/custom_components/historical_stats/translations/en.json
@@ -54,5 +54,21 @@
                 }
             }
         }
+    },
+    "stat_type": {
+        "value_at": "Value at",
+        "min": "Minimum",
+        "max": "Maximum",
+        "mean": "Mean",
+        "total": "Total change"
+    },
+    "time_unit": {
+        "minutes": "Minutes ago",
+        "hours": "Hours ago",
+        "days": "Days ago",
+        "weeks": "Weeks ago",
+        "months": "Months ago",
+        "years": "This year",
+        "all": "All history"
     }
 }
