--- a/custom_components/historical_stats/translations/en.json
+++ b/custom_components/historical_stats/translations/en.json
@@ -32,7 +32,7 @@
                     "add_point": "Add point",
                     "remove_indices": "Remove points",
                     "edit_index": "Edit point",
-                    "finish": "Finish"
+                    "finish": "Save changes"
                 }
             },
             "add_point": {
