--- a/custom_components/historical_stats/translations/en.json
+++ b/custom_components/historical_stats/translations/en.json
@@ -69,6 +69,6 @@
         "weeks": "Weeks ago",
         "months": "Months ago",
         "years": "Years ago",
-        "all": "Ever"
+        "all": "All time"
     }
 }
